<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>serial_comm</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="1632044@mobis.co.kr">jjw</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <exec_depend>hw_msgs</exec_depend>
  <exec_depend>imu_msgs</exec_depend>
  <exec_depend>python</exec_depend>
  <exec_depend>matplotlib-cpp</exec_depend>
  <build_depend>python</build_depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
